--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
+<html>
+<head>
+<meta charset="utf-8">
+<title>mbah nunung Online</title>
+<link href="https://warningfm.github.io/v3/myCast/css/myCast.css" rel="stylesheet" type="text/css">
+<script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+</head>
+<body style="width:100%;height:100%;padding:0;margin:0;background-color:#000;">
+
+<div class="myCast" id="stream"></div>
+
+<script src="https://warningfm.github.io/v3/myCast/js/myCast.js"></script>
+<script>
+    $("#stream").myCast({
+  URL: "https://rbtfm.herokuapp.com/?q=http://cast4.servcast.net:8532",
+    autoplay: true,
+    enable_cors: false,
+    accent: "lightblue",
+    lang: "en",
+    bg: "black",
+    blur: true,
+    blur_opacity: 0.16,
+    vertical_layout: true
+    });
+</script>   
+
+</body>
+</html>
 
