--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <script src="https://warningfm.github.io/v3/myCast/js/myCast.js"></script>
 <script>
     $("#stream").myCast({
-  URL: "https://rbtfm.herokuapp.com/?q=http://cast4.servcast.net:8532",
+  URL: "https://cors-nng.herokuapp.com/http://cast4.servcast.net:8532",
     autoplay: true,
     enable_cors: false,
     accent: "lightblue",
