--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>mbah nunung Online</title>
-<link href="https://warningfm.github.io/v3/myCast/css/myCast.css" rel="stylesheet" type="text/css">
+<link href="https://warningfm.github.io/v3/myCast/css/myCasts.css" rel="stylesheet" type="text/css">
 <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
 </head>
 <body style="width:100%;height:100%;padding:0;margin:0;background-color:#000;">
