--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="utf-8">
 <title>Cors Proxy</title>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+<script src="jquery.min.js"></script>
 </head>
 <body style="width:100%;height:100%;padding:0;margin:0;background-color:transparent;">
 <div align="center">
-<iframe src="https://bintangtenggarafm.com/tes" width="300" height="399" frameborder="0" scrolling="no"></iframe>
+<iframe src="https://warningfm.github.io/v3/player/cors-nng" width="300" height="399" frameborder="0" scrolling="no"></iframe>
 </div>
 
 </body>
