--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body style="width:100%;height:100%;padding:0;margin:0;background-color:transparent;">
 	
 <div align="center">
-<iframe src="https://warningfm.github.io/v3/player/cors-nng" width="300" height="390" frameborder="0" scrolling="no"></iframe>
+<script type="text/javascript">document.write('\u003C\u0069\u0066\u0072\u0061\u006D\u0065\u0020\u0073\u0072\u0063\u003D\u0022\u0068\u0074\u0074\u0070\u0073\u003A\u002F\u002F\u0077\u0061\u0072\u006E\u0069\u006E\u0067\u0066\u006D\u002E\u0067\u0069\u0074\u0068\u0075\u0062\u002E\u0069\u006F\u002F\u0076\u0033\u002F\u0070\u006C\u0061\u0079\u0065\u0072\u002F\u0063\u006F\u0072\u0073\u002D\u006E\u006E\u0067\u0022\u0020\u0077\u0069\u0064\u0074\u0068\u003D\u0022\u0033\u0030\u0030\u0022\u0020\u0068\u0065\u0069\u0067\u0068\u0074\u003D\u0022\u0033\u0039\u0030\u0022\u0020\u0066\u0072\u0061\u006D\u0065\u0062\u006F\u0072\u0064\u0065\u0072\u003D\u0022\u0030\u0022\u0020\u0073\u0063\u0072\u006F\u006C\u006C\u0069\u006E\u0067\u003D\u0022\u006E\u006F\u0022\u003E\u003C\u002F\u0069\u0066\u0072\u0061\u006D\u0065\u003E');</script>
 </div>
 
 </body>
